# youtubeLearnings

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PRODUCT_ROADMAP.md  config.yaml  main.py  pyproject.toml
data/: urls.txt
plans/: aligner_plan.md  ingestion_plan.md  markdown_generator_plan.md  synthesizer_plan.md  transcription_plan.md  visual_extractor_plan.md
src/aligner/: aligner.py
src/generator/: md_generator.py
src/ingestion/: audio_extractor.py  downloader.py  file_uploader.py  frame_extractor.py  meeting_pipeline.py  pipeline.py
src/llm/: __init__.py  claude_provider.py  gemini_provider.py  groq_provider.py  interface.py
src/synthesizer/: synthesizer.py
src/transcription/: diarizer.py  transcriber.py
src/utils/: cleanup.py
src/visual/: extractor.py  ocr.py  vision.py
web/: app.py  job_store.py  pipeline_runner.py
web/routes/: files.py  jobs_api.py  pages.py
web/templates/: archived_list.html  archived_preview.html  base.html  dashboard.html  job_detail.html  preview.html
web/templates/partials/: dashboard_jobs.html  job_card.html  log_panel.html  progress_panel.html
