[project]
name = "ayurvedalearningproject"
version = "0.1.0"
description = "YouTube Learning Material Extractor — converts lecture videos into structured Hinglish study notes"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "faster-whisper>=1.2.1",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "scenedetect>=0.7",
    "yt-dlp>=2026.3.17",
]
